--- a/FlagEx/FlagEx.vcxproj.filters
+++ b/FlagEx/FlagEx.vcxproj.filters
@@ -14,4 +14,12 @@
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="src\Goal.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\flagex_base.h">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
