--- a/FlagEx/FlagEx.vcxproj.filters
+++ b/FlagEx/FlagEx.vcxproj.filters
@@ -21,5 +21,11 @@
     <ClCompile Include="src\flagex_base.h">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="src\flagex_base.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="src\flagex_funcs.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
